# cs2excel

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
default_save_and_worksheet/: default_invest_worksheet_group_similar_items.xlsx  default_save_invest_group_similar_items.json
mock/prices_json/: buff163.json  csfloat.json  youpin.json
src/: excel.rs  main.rs  main_structs.rs  user_sheet_tmp.rs
src/browser/: cookies.rs  csfloat.rs  csgotrader.rs  mod.rs  steamcommunity.rs
src/excel/: excel_ops.rs  excel_runtime.rs  helpers.rs  main_excel.rs  mod.rs
src/firefox/: cookies.rs
src/gui/: ice.rs  mod.rs  templates_n_methods.rs
src/helpers/: csgoskins_url.rs  helper_consts.rs  mod.rs  steam_item_market_name.rs
src/models/: excel.rs  item.rs  item_metadata.rs  mod.rs  price.rs  user_sheet.rs  web.rs
src/parsing/: csgoskins_url.rs  item_csfloat.rs  item_csgotrader.rs  market_name_parse.rs  mod.rs
src/pricing/: mod.rs  price_csgotrader.rs  prices.rs
src/websites/: csgoskins.rs  mod.rs  steam.rs
ui/: app-window.slint
ui/icons/: GGjqnCiWwAAGW57.jfif  GRIGHBJXgAAdhYr.jfif  GRPx02ZXQAMIaQp.jfif  realTopG.jfif
