[package]
name = "cs2excel"
version = "0.1.6"
edition = "2024"
authors = ["Mikael Lunde Isaksen"]
license = "GPL-3.0"
description = "Create, manage, update and track your CS2 inventory value."

[[bin]]
name = "cs2excel"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
reqwest = { version = "0.12.24", features = ["json", "brotli"] }
whoami = { version = "1.6.1" }
rusqlite = { version = "0.37.0" } # use features = ["bundled"] if you're having problems with linking sqlite or you just dont have it installed.
tokio = { version = "1.48.0", features = ["fs"] }
flate2 = { version = "1.1.4" }
umya-spreadsheet = { version = "2.3.3" }
urlencoding = { version = "2.1.3" }
strum = { version = "0.27.2", features = ["derive"] }
rand = { version = "0.9.2" }
regex = { version = "1.12.2" }
chrono = { version = "0.4.42", features = ["serde"] }
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["tokio", "sipper", "image"]}
num-traits = "0.2.19"
rfd = { version = "0.15.4", features = ["file-handle-inner"] }

sipper = "0.1.0"
dirs = "6.0.0"
open = "5.3.2"
ahash = "0.8.12"
pad = "0.1.6"

# indexmap = { version = "2.10.0" }

[build-dependencies]
winresource = "0.1.23"
 