[package]
name = "cs2excel"
version = "0.1.7"
edition = "2024"
authors = ["Mikael Lunde Isaksen"]
license = "GPL-3.0"
description = "Create, manage, update and track your CS2 inventory value."

[[bin]]
name = "cs2excel"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = false
panic = "abort"
debug = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
reqwest = { version = "0.13.2", features = ["json", "brotli"] }
whoami = { version = "2.1.1" }
rusqlite = { version = "0.38.0", features = ["bundled"]} # use features = ["bundled"] if you're having problems with linking sqlite or you just dont have it installed.
tokio = { version = "1.44.2", features = ["fs"] }
flate2 = { version = "1.1.5" }
umya-spreadsheet = { version = "2.3.3" }
urlencoding = { version = "2.1.3" }
strum = { version = "0.28.0", features = ["derive"] }
rand = { version = "0.10.0" }
regex = { version = "1.12.2" }
chrono = { version = "0.4.42", features = ["serde"] }
# iced = { git = "https://github.com/iced-rs/iced.git", rev = "01c79ad8166386fe2b2e2685cf559a9bda142ef0", features = ["tokio", "sipper", "image"]} # branch = "master"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["tokio", "sipper", "image"]}
indexmap = { version = "2.12.1", features = ["serde"] }
rfd = { version = "0.17.2", features = ["file-handle-inner"] }

sipper = "0.1.0"
dirs = "6.0.0"
open = "5.3.3"
ahash = "0.8.12"
num-traits = "0.2.19"

dhat = { version = "0.3.3" }

[features]
dhat-heap = []

[build-dependencies]
winresource = "0.1.27"
